# aset_ws

./: .gitignore  CLAUDE.md
llm_task_logs/: 20260620_164721_pick_up_the_red_cube_and_place_it_in_the.json
maps/: warehouse_map.pgm  warehouse_map.yaml
src/Robotic_Arm/: CMakeLists.txt  package.xml
src/Robotic_Arm/launch/: display.launch  gazebo.launch
src/Robotic_Arm/meshes/: gripper_1.STL  gripper_actuator.STL  lower_arm.STL
src/Robotic_Arm/urdf/: Robotic_Arm.csv  Robotic_Arm.urdf
src/arm_moveit_config/: package.xml
src/arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  robotic_arm.srdf  ros2_controllers.yaml
src/arm_moveit_config/launch/: demo.launch.py
src/mm_bringup/: CMakeLists.txt  package.xml
src/mm_bringup/config/: gz_bridge.yaml  gz_gui.config  nav2_params.yaml  ros2_controllers_gz.yaml  slam_rviz.rviz  slam_toolbox_params.yaml
src/mm_bringup/launch/: nav2.launch.py  phase4.launch.py  sim.launch.py  slam.launch.py
src/mm_bringup/urdf/: mobile_base.urdf.xacro  mobile_manipulator.urdf.xacro
src/mm_bringup/worlds/: blue_cube.sdf  green_cube.sdf  red_cube.sdf  warehouse.sdf
src/mm_interfaces/: CMakeLists.txt  package.xml
src/mm_interfaces/action/: ExecuteTask.action
src/mm_interfaces/msg/: Detection.msg
src/mm_interfaces/srv/: DetectObjects.srv  DriveDistance.srv  GetSceneState.srv  Pick.srv  Place.srv
src/mm_llm_planner/: package.xml  setup.cfg  setup.py
src/mm_llm_planner/config/: system_prompt.txt
src/mm_llm_planner/mm_llm_planner/: llm_clients.py  planner_node.py  send_task.py  task_logger.py  tool_schemas.py
src/mm_perception/: package.xml  setup.py
src/mm_perception/mm_perception/: perception_node.py
src/mobile_manipulator_core/: CMakeLists.txt  package.xml
src/mobile_manipulator_core/config/: locations.yaml
src/mobile_manipulator_core/launch/: smoke_test.launch.py
src/mobile_manipulator_core/src/: grasp_server.cpp  moveit_smoke_test.cpp  state_manager_node.cpp  tool_server_node.cpp  tool_test.cpp
src/robotic_arm_description/: package.xml
src/robotic_arm_description/config/: display.rviz
src/robotic_arm_description/launch/: display.launch.py
src/robotic_arm_description/meshes/: base_link.STL  gripper_2.STL  rotary_yoke.STL  shoulder_drive.STL  upper_arm.STL  wrist_module.STL
src/robotic_arm_description/urdf/: robotic_arm.urdf.xacro
