<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mm_llm_planner</name>
  <version>0.1.0</version>
  <description>Closed-loop LLM task planner for the mobile manipulator (Phase 5)</description>
  <maintainer email="firaalx@gmail.com">Firaol-Tes</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mm_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
