<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mm_perception</name>
  <version>0.1.0</version>
  <description>HSV + YOLOv8 perception node for the mobile manipulator</description>
  <maintainer email="firaalx@gmail.com">Firaol-Tes</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mm_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
