<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro description for a 6-DOF robotic arm with two-finger gripper</description>
  <maintainer email="firaalx@gmail.com">Firaol-Tes</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Gazebo Harmonic mesh resolution: adds share/ to GZ_SIM_RESOURCE_PATH
         so model://robotic_arm_description/meshes/*.STL can be found. -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
